fix: spacing under menu

--- a/css/style.css
+++ b/css/style.css
@@ -473,7 +473,7 @@ header a:link, header a:visited {
 .section {
   display: inline-block;
   width: 100%;
-  padding: 24px 0;
+  /*padding: 24px 0;*/
 }
 
 .section-header, .section-header h5 {
@@ -801,7 +801,7 @@ main .container {
 }
 
 main .container {
-  margin: 0 auto;
+  margin: 2rem auto;
   width: calc(100% - 1rem);
 }
 
